fix skeletons to avoid flickering

--- a/packages/app-earn-ui/src/components/molecules/OrderInformation/OrderInformation.module.scss
+++ b/packages/app-earn-ui/src/components/molecules/OrderInformation/OrderInformation.module.scss
@@ -12,6 +12,7 @@
     .listItem {
       display: flex;
       justify-content: space-between;
+      align-items: center;
 
       .label {
         display: flex;
